--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,6 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/validation/login-validation.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -21,11 +20,11 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>    
-    <script src="js/controllers.js"></script>    
-    <script src="js/services.js"></script>    
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" class="b-gray">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
