--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter" class="b-gray">
+  <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
