--- a/www/index.html
+++ b/www/index.html
@@ -6,27 +6,27 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="lib/ionic/css/ionic.min.css?ionicCachebuster=62961" rel="stylesheet">
+    <link href="css/style.css?ionicCachebuster=62961" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js?ionicCachebuster=62961"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <script src="cordova.js?ionicCachebuster=62961"></script>
 
     <!-- Other dependencies -->
-    <script src="lib/mathjs/dist/math.min.js"></script>
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/mathjs/dist/math.min.js?ionicCachebuster=62961"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js?ionicCachebuster=62961"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+    <script src="js/app.js?ionicCachebuster=62961"></script>
+    <script src="js/controllers.js?ionicCachebuster=62961"></script>
+    <script src="js/services.js?ionicCachebuster=62961"></script>
   </head>
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
